--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-paper": "^5.9.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
